feat(landing): Adds photo collage component
Adds a photo collage component to the landing and gallery pages to showcase images.

This commit introduces a new component that displays a collage of images, enhancing the visual appeal of the application.
The component is used to display photos from the 2024 gallery on both the landing and gallery pages, with different configurations for each page.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Bachblyten Festival 2026 - Flugplatz Schwesing</title>
+    <title>BACHBLYTEN® FESTIVAL 2026 - Flugplatz Schwesing</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="bb_mainbrand_light_01.svg" />
@@ -30,7 +30,7 @@
         anonymize_ip: true,
         allow_google_signals: false,
         allow_ad_personalization_signals: false,
-        transport_type: 'beacon'
+        transport_type: 'beacon',
       });
     </script>
   </head>
