feat(core): Opts out of forced dark theme
Adds meta tags and CSS to prevent forced dark mode by browsers like Samsung Internet, ensuring the intended color scheme is maintained.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <title>BACHBLYTEN® FESTIVAL 2026 - Flugplatz Schwesing</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Prevent Samsung Internet / forced dark modes from overriding our palette -->
+    <meta name="color-scheme" content="dark" />
+    <meta name="supported-color-schemes" content="dark" />
     <link rel="icon" type="image/svg+xml" href="bb_mainbrand_light_01.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
