feat(index): Adds OG image and meta tags
Adds open graph image and meta tags for better SEO.

Includes title, description, URL, image and locale
information for improved social media sharing and indexing.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,20 @@
     <!-- Prevent Samsung Internet / forced dark modes from overriding our palette -->
     <meta name="color-scheme" content="dark" />
     <meta name="supported-color-schemes" content="dark" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="BACHBLYTEN® Festival 2026 – Flugplatz Schwesing" />
+    <meta
+      property="og:description"
+      content="24.–26. Juli 2026 | Techno, Indie Dance, Psy Techno, Goa, Drum & Bass und mehr auf dem Flugplatz Schwesing. Tickets, Line-up, Anfahrt & Infos."
+    />
+    <meta property="og:site_name" content="BACHBLYTEN Festival" />
+    <meta property="og:url" content="https://bachblyten-festival.com/" />
+    <meta
+      property="og:image"
+      content="https://bachblyten-festival.com/og-image-bachblyten-2026.jpg"
+    />
+    <meta property="og:image:alt" content="BACHBLYTEN Festival 2026 – Logo und Kulisse" />
+    <meta property="og:locale" content="de_DE" />
     <link rel="icon" type="image/svg+xml" href="bb_mainbrand_light_01.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
