--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <title>BACHBLYTEN® FESTIVAL 2026 - Flugplatz Schwesing</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="BACHBLYTEN® Festival 24.–26. Juli 2026 am Flugplatz Schwesing. Techno, Indie Dance, Drum & Bass, Tickets, Line-up, Anfahrt & alle Infos."
+    />
+    <link rel="canonical" href="https://bachblyten-festival.com/" />
     <!-- Prevent Samsung Internet / forced dark modes from overriding our palette -->
     <meta name="color-scheme" content="dark" />
     <meta name="supported-color-schemes" content="dark" />
@@ -22,6 +27,16 @@
     />
     <meta property="og:image:alt" content="BACHBLYTEN Festival 2026 – Logo und Kulisse" />
     <meta property="og:locale" content="de_DE" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BACHBLYTEN® Festival 2026 – Flugplatz Schwesing" />
+    <meta
+      name="twitter:description"
+      content="24.–26. Juli 2026 | Techno, Indie Dance, Psy Techno, Goa, Drum & Bass und mehr auf dem Flugplatz Schwesing. Tickets, Line-up, Anfahrt & Infos."
+    />
+    <meta
+      name="twitter:image"
+      content="https://bachblyten-festival.com/og-image-bachblyten-2026.jpg"
+    />
     <link rel="icon" type="image/svg+xml" href="bb_mainbrand_light_01.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -49,6 +64,34 @@
         allow_ad_personalization_signals: false,
         transport_type: 'beacon',
       });
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Festival",
+        "name": "BACHBLYTEN Festival 2026",
+        "startDate": "2026-07-24",
+        "endDate": "2026-07-26",
+        "eventStatus": "https://schema.org/EventScheduled",
+        "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+        "location": {
+          "@type": "Place",
+          "name": "Flugplatz Schwesing",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Schwesing",
+            "addressCountry": "DE"
+          }
+        },
+        "url": "https://bachblyten-festival.com/",
+        "image": "https://bachblyten-festival.com/og-image-bachblyten-2026.jpg",
+        "description": "Techno, Indie Dance, Psy Techno, Goa, Drum & Bass und mehr – 24.–26. Juli 2026 am Flugplatz Schwesing.",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://bachblyten-festival.com/tickets",
+          "availability": "https://schema.org/InStock"
+        }
+      }
     </script>
   </head>
   <body>
