--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
       content="https://bachblyten-festival.com/og-image-bachblyten-2026.jpg"
     />
     <link rel="icon" type="image/svg+xml" href="bb_mainbrand_light_01.svg" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
