--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,29 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <title>BACHBLYTEN® FESTIVAL 2026 - Flugplatz Schwesing</title>
+    <title>Festival Norddeutschland 2026 | BACHBLYTEN® Festival | Flugplatz Schwesing</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="BACHBLYTEN® Festival 24.–26. Juli 2026 am Flugplatz Schwesing (Schleswig-Holstein). Techno, Indie Dance, Psy Techno, Goa & Drum & Bass in Norddeutschland. Tickets, Line-up, Anfahrt & alle Infos."
+      content="BACHBLYTEN® Festival 24.–26. Juli 2026 in Schwesing (Schleswig-Holstein): elektronisches Festival in Norddeutschland mit Techno, Indie Dance, Goa & Drum & Bass. Tickets, Line-up, Camping & Anfahrt."
+    />
+    <meta
+      name="keywords"
+      content="Festival Norddeutschland, Techno Festival Schleswig-Holstein, Open Air 2026, Bachblyten Festival, Festival Schwesing, Elektro Festival Norddeutschland"
     />
     <link rel="canonical" href="https://bachblyten-festival.com/" />
     <!-- Prevent Samsung Internet / forced dark modes from overriding our palette -->
     <meta name="color-scheme" content="dark" />
     <meta name="supported-color-schemes" content="dark" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="BACHBLYTEN® Festival 2026 – Flugplatz Schwesing" />
+    <meta
+      property="og:title"
+      content="Festival Norddeutschland: BACHBLYTEN® Festival 2026 – Flugplatz Schwesing"
+    />
     <meta
       property="og:description"
-      content="24.–26. Juli 2026 | Techno, Indie Dance, Psy Techno, Goa, Drum & Bass in Schleswig-Holstein. Rollfeld-Vibes in Norddeutschland: Tickets, Line-up, Anfahrt & Infos."
+      content="24.–26. Juli 2026 | Techno, Indie Dance, Psy Techno, Goa, Drum & Bass in Schleswig-Holstein. Elektronisches Festival in Norddeutschland: Tickets, Line-up, Anfahrt & Infos."
     />
     <meta property="og:site_name" content="BACHBLYTEN Festival" />
     <meta property="og:url" content="https://bachblyten-festival.com/" />
@@ -28,10 +35,13 @@
     <meta property="og:image:alt" content="BACHBLYTEN Festival 2026 – Logo und Kulisse" />
     <meta property="og:locale" content="de_DE" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BACHBLYTEN® Festival 2026 – Flugplatz Schwesing" />
+    <meta
+      name="twitter:title"
+      content="Festival Norddeutschland: BACHBLYTEN® Festival 2026 – Flugplatz Schwesing"
+    />
     <meta
       name="twitter:description"
-      content="24.–26. Juli 2026 | Techno, Indie Dance, Psy Techno, Goa, Drum & Bass in Schleswig-Holstein. Rollfeld-Festival in Norddeutschland: Tickets, Line-up, Anfahrt & Infos."
+      content="24.–26. Juli 2026 | Techno, Indie Dance, Psy Techno, Goa, Drum & Bass in Schleswig-Holstein. Elektronisches Festival in Norddeutschland: Tickets, Line-up, Anfahrt & Infos."
     />
     <meta
       name="twitter:image"
@@ -78,18 +88,34 @@
             "endDate": "2026-07-26",
             "eventStatus": "https://schema.org/EventScheduled",
             "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+            "inLanguage": "de-DE",
+            "keywords": [
+              "Festival Norddeutschland",
+              "Techno Festival Schleswig-Holstein",
+              "Open Air Festival 2026",
+              "Bachblyten Festival",
+              "Elektronisches Festival Norddeutschland"
+            ],
+            "genre": ["Techno", "Indie Dance", "Psy Techno", "Goa", "Drum & Bass"],
             "location": {
               "@type": "Place",
               "name": "Flugplatz Schwesing",
               "address": {
                 "@type": "PostalAddress",
                 "addressLocality": "Schwesing",
+                "addressRegion": "Schleswig-Holstein",
                 "addressCountry": "DE"
+              },
+              "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 54.51,
+                "longitude": 9.138
               }
             },
             "url": "https://bachblyten-festival.com/",
             "image": "https://bachblyten-festival.com/og-image-bachblyten-2026.jpg",
             "description": "Techno, Indie Dance, Psy Techno, Goa, Drum & Bass und mehr – 24.–26. Juli 2026 am Flugplatz Schwesing.",
+            "areaServed": "Norddeutschland",
             "offers": {
               "@type": "Offer",
               "url": "https://bachblyten-festival.com/tickets",
