refactor(index): Updates page title.
Updates the page title to improve SEO and reflects the event location.

The title is now more concise and emphasizes key information.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <title>Festival Norddeutschland 2026 | BACHBLYTEN® Festival | Flugplatz Schwesing</title>
+    <title>BACHBLYTEN® Festival 2026 | Flugplatz Schwesing - Norddeutschland</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
