fix(index): Updates title and og tags
Updates the title and og tags to include "Norddeutschland" for better SEO and clarity.

This change ensures the website is accurately represented when shared on social media platforms and search engines.

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Festival Norddeutschland: BACHBLYTEN® Festival 2026 – Flugplatz Schwesing"
+      content="BACHBLYTEN® Festival 2026 – Flugplatz Schwesing - Norddeutschland"
     />
     <meta
       property="og:description"
@@ -37,7 +37,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Festival Norddeutschland: BACHBLYTEN® Festival 2026 – Flugplatz Schwesing"
+      content="BACHBLYTEN® Festival 2026 – Flugplatz Schwesing - Norddeutschland"
     />
     <meta
       name="twitter:description"
