feat(public): Uses WebP images for logos
Updates the logo images from SVG to WebP format for better performance and smaller file sizes.

Removes the old SVG logo files.

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
       name="twitter:image"
       content="https://bachblyten-festival.com/og-image-bachblyten-2026.jpg"
     />
-    <link rel="icon" type="image/svg+xml" href="bb_mainbrand_light_01.svg" />
+    <link rel="icon" type="image/webp" href="bb_mainbrand_light_01.webp" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -126,7 +126,7 @@
             "@type": "Organization",
             "name": "BACHBLYTEN Festival",
             "url": "https://bachblyten-festival.com/",
-            "logo": "https://bachblyten-festival.com/bb_mainbrand_light_24.svg",
+            "logo": "https://bachblyten-festival.com/bb_mainbrand_light_24.webp",
             "sameAs": ["https://www.instagram.com/bachblyten/?hl=de"]
           }
         ]
